manifests/media/overseerr/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: overseerr
  name: overseerr
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: overseerr
  template:
    metadata:
      labels:
        app: overseerr
    spec:
      containers:
      - image: hotio/overseerr
        name: overseerr
        ports:
        - containerPort: 5055
        volumeMounts:
        - name: overseerr-appdata
          mountPath: /app/config
      volumes:
        - name: overseerr-appdata
          persistentVolumeClaim:
            claimName: overseerr-appdata
