manifests/media/overseerr/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: overseerr
  labels:
    app: overseerr
  namespace: media
spec:
  selector:
    app: overseerr
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 5055
      targetPort: 5055
